<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_map"
        android:enabled="true"
        android:title="@string/map"
        android:icon="@drawable/compass"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_list"
        android:enabled="true"
        android:title="@string/routes"
        android:icon="@drawable/route"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_settings"
...
